[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qfc-sdk"
version = "0.1.0"
description = "Python SDK for QFC Blockchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "QFC Team", email = "dev@qfc.network" }
]
keywords = ["qfc", "blockchain", "web3", "ethereum", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.10.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/lai3d/qfc-sdk-python"
Documentation = "https://docs.qfc.network/sdk/python"
Repository = "https://github.com/lai3d/qfc-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/qfc_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
